# alignmentrs

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md  alignmentrs_imports.py  setup.py  test_alignment.txt  test_alignment_0_8.py  test_alignment_0_8_2.py  test_alignment_0_8_b.py  test_alignment_b.txt
alignmentrs/: __init__.py  alignment.py  fasta.py  history.py  set.py  util.py  utils.py  warning.py
alignmentrs/aln/: __init__.py  alignment.py  classes.py  col.py  funcs.py  metadata.py  mixins.py  mutator.py  record.py  row.py
alignmentrs/aln/mixins/: __init__.py  aln.py  aln_mixins.py  coords.py  functions.py  marker_mixins.py  sample.py  sample_mixins.py  serde.py  serde_mixins.py
alignmentrs/aln/mixins/tests/: mocks.py  test_dict_serde.py  test_dict_serde_mixin.py  test_fasta_serde.py  test_json_serde.py  test_pickle_serde.py  test_records_serde.py
alignmentrs/aln/tests/: test_alignment_constructors.py
alignmentrs/alnset/: __init__.py  classes.py  funcs.py
alignmentrs/extras/: numpy.py  pandas.py
alignmentrs/tests/: test_alignment.py  test_alignment_0_8_5.py  test_alignment_set.py  test_utils.py
examples/: 01_Reading_alignments.ipynb  02a_Removing_rows.ipynb  02b_Removing_columns.ipynb  03a_Filtering_rows.ipynb  03b_Filtering_columns.ipynb
src/: alignment.rs  fasta.rs  lib.rs  marker.rs  position.rs  readers.rs  record.rs  sample.rs  sequence.rs
