[package]
name = "alignmentrs"
version = "0.9.0"
authors = ["Kent Kawashima <kentkawashima@gmail.com>"]
edition = "2018"

[lib]
name = "libalignmentrs"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.5"
features = ["extension-module"]

[dependencies.regex]
version = "1"

[dependencies.lazy_static]
version = "1.2.0"